feat: new authenticate